# Game-of-Life-in-Rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: calculate.rs
src/: display.rs  grid.rs  main.rs  rules.rs  simulation.rs
